--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ version: 1.0.2
 homepage: https://github.com/nizwar/screen_capture_event.git
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
-  flutter: ">=2.8.0"
+  sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^9.2.0
+  # permission_handler: ^9.2.0
+  permission_handler: ^10.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.4
